# bedcompare

./: Cargo.toml  README.md
.github/workflows/: release.yml
bed/: variants_68_percent.bed  variants_68_percent_1.bed
src/: main.rs
