[package]
name = "bedcompare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.15"
serde_json = "1.0"



[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
