[package]
name = "bedcompare"
version = "0.1.1"
edition = "2021"
authors = ["Stanislav Zubenko <5831286+Dantistnfs@users.noreply.github.com>"]


[dependencies]
clap = "4.4.15"
serde_json = "1.0"



[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
